audit and auth done
